Put something together real quick

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html,
+body,
+#root {
+  height: 100%;
+}
+
+body {
+  font-family: "Atkinson Hyperlegible", sans-serif;
+  --black: hsl(228, 12%, 22%);
+  --yellow: #ffc759ff;
+  --pink: #ff7b9cff;
+  --blue: #607196ff;
+  --lavender: #babfd1ff;
+  --gray: #e8e9edff;
+
+  color: var(--black);
+  font-size: 22px;
+}
+
+button {
+  font-family: inherit;
 }
