--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,174 @@
-.App {
-  text-align: center;
+.menu {
+  position: fixed;
+  width: 100%;
+  background-color: var(--gray);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  transition: box-shadow 0.5s;
+  z-index: 1;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.menu.hideShadow {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0), 0 3px 6px rgba(0, 0, 0, 0);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.stripes {
+  height: 10px;
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  position: relative;
+}
+
+.stripes:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 33.33%;
+  bottom: 0;
+  background-color: hsla(0, 0%, 0%, 15%);
+}
+
+.stripes > div:nth-child(4n) {
+  background-color: var(--yellow);
+}
+.stripes > div:nth-child(4n + 1) {
+  background-color: var(--pink);
+}
+.stripes > div:nth-child(4n + 2) {
+  background-color: var(--blue);
+}
+.stripes > div:nth-child(4n + 3) {
+  background-color: var(--lavender);
+}
+
+.stripes > div:nth-child(5n) {
+  flex-grow: 1;
+}
+.stripes > div:nth-child(5n + 1) {
+  flex-grow: 4;
+}
+.stripes > div:nth-child(5n + 2) {
+  flex-grow: 1;
+}
+.stripes > div:nth-child(5n + 3) {
+  flex-grow: 3;
+}
+.stripes > div:nth-child(5n + 4) {
+  flex-grow: 2;
+}
+
+.menuStructure {
+  display: flex;
+  justify-content: space-between;
+  gap: 1em;
+}
+
+.menuItems {
+  list-style-type: none;
+  display: flex;
+  gap: 1em;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.menuItem {
+  padding: 0.5em 1em;
+  border: 0;
+  border-bottom: 3px solid var(--lavender);
+  background-color: transparent;
+  cursor: pointer;
+  transition: border-color 0.5s, color 0.5s;
+  letter-spacing: 1.5px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: var(--blue);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menuItem:hover,
+.menuItem.active {
+  border-bottom: 3px solid var(--pink);
+}
+
+.menuItem.active {
+  border-bottom: 3px solid var(--pink);
+  cursor: pointer;
+  color: var(--pink);
+}
+
+.intro {
+  height: 100vh;
+  padding-top: 6em;
+  background-color: var(--gray);
+  position: relative;
+}
+
+.intro .contentInnerWrapper {
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  background-size: 60% auto;
+}
+
+.intro p {
+  width: 50%;
+  padding-top: 3em;
+  line-height: 1.5;
+}
+
+h1 {
+  font-size: 4em;
+}
+
+h1 .name {
+  color: var(--pink);
+}
+
+h2 {
+  font-size: 2em;
+  font-weight: normal;
+  color: var(--blue);
+}
+
+.contentSection {
+  padding: 1em 0;
+  min-height: 100vh;
+}
+
+.intro,
+.contentSection,
+.siteFooter {
+  box-shadow: 0 -20em 10em -10em inset hsla(0, 0%, 0%, 15%);
+}
+
+h3 {
+  font-size: 2em;
+}
+
+.contentSection p {
+  line-height: 1.5;
+  margin: 1em 0;
+}
+
+.contentInnerWrapper {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 1em;
+}
+
+.section1 {
+  background-color: var(--blue);
+}
+
+.section2 {
+  background-color: var(--pink);
+}
+
+.section3 {
+  background-color: var(--lavender);
+}
+
+.section4 {
+  background-color: var(--yellow);
+}
+
+.siteFooter {
+  background-color: var(--gray);
 }
