--- a/src/App.css
+++ b/src/App.css
@@ -1,98 +1,3 @@
-.menu {
-  position: fixed;
-  width: 100%;
-  background-color: var(--gray);
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  transition: box-shadow 0.5s;
-  z-index: 1;
-}
-
-.menu.hideShadow {
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0), 0 3px 6px rgba(0, 0, 0, 0);
-}
-
-.stripes {
-  height: 10px;
-  width: 100%;
-  display: flex;
-  position: relative;
-}
-
-.stripes:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 33.33%;
-  bottom: 0;
-  background-color: hsla(0, 0%, 0%, 15%);
-}
-
-.stripes > div:nth-child(4n) {
-  background-color: var(--yellow);
-}
-.stripes > div:nth-child(4n + 1) {
-  background-color: var(--pink);
-}
-.stripes > div:nth-child(4n + 2) {
-  background-color: var(--blue);
-}
-.stripes > div:nth-child(4n + 3) {
-  background-color: var(--lavender);
-}
-
-.stripes > div:nth-child(5n) {
-  flex-grow: 1;
-}
-.stripes > div:nth-child(5n + 1) {
-  flex-grow: 4;
-}
-.stripes > div:nth-child(5n + 2) {
-  flex-grow: 1;
-}
-.stripes > div:nth-child(5n + 3) {
-  flex-grow: 3;
-}
-.stripes > div:nth-child(5n + 4) {
-  flex-grow: 2;
-}
-
-.menuStructure {
-  display: flex;
-  justify-content: space-between;
-  gap: 1em;
-}
-
-.menuItems {
-  list-style-type: none;
-  display: flex;
-  gap: 1em;
-  align-items: center;
-}
-
-.menuItem {
-  padding: 0.5em 1em;
-  border: 0;
-  border-bottom: 3px solid var(--lavender);
-  background-color: transparent;
-  cursor: pointer;
-  transition: border-color 0.5s, color 0.5s;
-  letter-spacing: 1.5px;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: var(--blue);
-}
-
-.menuItem:hover,
-.menuItem.active {
-  border-bottom: 3px solid var(--pink);
-}
-
-.menuItem.active {
-  border-bottom: 3px solid var(--pink);
-  cursor: pointer;
-  color: var(--pink);
-}
-
 .contentInnerWrapper {
   height: 100%;
   background-repeat: no-repeat;
@@ -102,7 +7,6 @@
 
 .contentSection {
   padding: 1em 0;
-  min-height: 100vh;
 }
 
 .contentSection,
@@ -125,19 +29,19 @@ h3 {
   padding: 1em;
 }
 
-.section1 {
+.contentSection:nth-child(4n) {
   background-color: var(--blue);
 }
 
-.section2 {
+.contentSection:nth-child(4n + 1) {
   background-color: var(--pink);
 }
 
-.section3 {
+.contentSection:nth-child(4n + 2) {
   background-color: var(--lavender);
 }
 
-.section4 {
+.contentSection:nth-child(4n + 3) {
   background-color: var(--yellow);
 }
 
