--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -1,3 +1,13 @@
+.app {
+  height: 100%;
+}
+
+main {
+  height: 100%;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
 .contentInnerWrapper {
   height: 100%;
   background-repeat: no-repeat;
@@ -7,6 +17,12 @@
 
 .contentSection {
   padding: 1em 0;
+}
+
+@media (max-width: 920px) {
+  .contentSection {
+    padding-top: 72px;
+  }
 }
 
 .contentSection,
