--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -9,6 +9,12 @@
   box-shadow: 0 -20em 10em -10em inset hsla(0, 0%, 0%, 15%);
 }
 
+@media (max-width: 920px) {
+  .intro {
+    padding-top: 72px;
+  }
+}
+
 .intro p {
   width: 50%;
   padding-top: 3em;
