--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -1,5 +1,5 @@
 .menu {
-  position: fixed;
+  position: sticky;
   width: 100%;
   background-color: var(--gray);
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
