--- a/src/components/Stripes/stripes.css
+++ b/src/components/Stripes/stripes.css
@@ -43,6 +43,12 @@
   flex-grow: 2;
 }
 
+@media (max-width: 1280px) {
+  .stripes > div:nth-child(n + 25) {
+    display: none;
+  }
+}
+
 @media (max-width: 920px) {
   .stripes > div:nth-child(n + 20) {
     display: none;
