--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,18 @@ body {
   overflow: hidden;
 }
 
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--gray);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--blue);
+}
+
 button {
   font-family: inherit;
 }
