--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -6,6 +6,7 @@
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   transition: box-shadow 0.5s;
   z-index: 1;
+  height: 92px;
 }
 
 .menu.hideShadow {
