--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -13,13 +15,20 @@ body,
 }
 
 body {
-  font-family: "Atkinson Hyperlegible", sans-serif;
+  font-family: "Playfair Display", serif;
   --black: hsl(228, 12%, 22%);
-  --yellow: #ffc759ff;
+
+  --yellow: hsl(40, 100%, 67%);
   --pink: hsl(15, 75%, 66%);
-  --blue: rgb(96, 122, 150);
-  --lavender: #babfd1ff;
-  --gray: #e8e9edff;
+  --blue: hsl(211, 22%, 48%);
+  --lavender: hsl(227, 20%, 50%);
+  --gray: hsl(228, 5%, 45%);
+
+  --yellow-bright: hsl(40, 100%, 90%);
+  --pink-bright: hsl(15, 75%, 85%);
+  --blue-bright: hsl(211, 22%, 80%);
+  --lavender-bright: hsl(227, 20%, 77%);
+  --gray-bright: hsl(228, 12%, 92%);
 
   color: var(--black);
   font-size: 22px;
@@ -38,7 +47,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: var(--gray);
+  background-color: var(--gray-bright);
 }
 
 ::-webkit-scrollbar-thumb {
