--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -51,9 +51,9 @@
 }
 
 .menuItem.active {
-  border-bottom: 3px solid var(--pink);
+  border-bottom: 3px solid var(--peach);
   cursor: pointer;
-  color: var(--pink);
+  color: var(--peach);
 }
 
 @media (max-width: 920px) {
@@ -68,7 +68,7 @@
   left: 12px;
   width: 48px;
   height: 48px;
-  border: 3px solid var(--pink);
+  border: 3px solid var(--peach);
   z-index: 3;
   display: flex;
   align-items: center;
