--- a/src/components/Stripes/stripes.css
+++ b/src/components/Stripes/stripes.css
@@ -18,7 +18,7 @@
   background-color: var(--yellow);
 }
 .stripes > div:nth-child(4n + 1) {
-  background-color: var(--pink);
+  background-color: var(--peach);
 }
 .stripes > div:nth-child(4n + 2) {
   background-color: var(--blue);
